--- a/package.json
+++ b/package.json
@@ -6,7 +6,22 @@
   "scripts": {
     "test": "node ./start.ts"
   },
-  "keywords": ["file", "update", "utility"],
+  "keywords": [
+    "file",
+    "update",
+    "utility"
+  ],
   "author": "Sergei Popov <dotikdeveloper@gmail.com>, <https://dotdev.site/>",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/node": "^17.0.16",
+    "typescript": "^4.5.5"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4"
+  }
 }
