--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Utility to add string to multiple files",
   "main": "index.js",
   "scripts": {
-    "test": "node ./start.ts"
+    "start": "node ./app/start.js",
+    "build": "npx tsc --project ./\n"
   },
   "keywords": [
     "file",
@@ -13,15 +14,16 @@
   ],
   "author": "Sergei Popov <dotikdeveloper@gmail.com>, <https://dotdev.site/>",
   "license": "ISC",
-  "dependencies": {
-    "@types/node": "^17.0.16",
-    "typescript": "^4.5.5"
-  },
   "devDependencies": {
+    "@types/node": "^17.0.16",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.4"
+    "eslint-plugin-import": "^2.25.4",
+    "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "chalk": "^5.0.0"
   }
 }
